# qubitrix

./: .gitignore  README.md  controller.py  input_controller.py  license.txt  model.py  pyproject.toml  qubitrix.py  readme.txt  view.py
Qubitrix/: __init__.py  license.txt  qubitrix.py
Qubitrix/controllers/: abstract_controller.py  keyboard_controller.py
Qubitrix/controllers/abstract_controller/: __init__.py
Qubitrix/fonts/: __init__.py  font_readme.txt
Qubitrix/sounds/: __init__.py
tests/: test_effects.py
tests/sounds/: test_effects.py
